force-app/main/default/objects/CBK_Precio_Facturacion__c/CBK_Precio_Facturacion__c.object-meta.xml
<CustomObject>
    <label>Precio Facturación</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Precio Facturación Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Precios Facturación</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>