force-app/main/default/objects/CBK_Precio_Facturacion__c/fields/CC_Activo__c.field-meta.xml
<CustomField>
    <fullName>CC_Activo__c</fullName>
    <formula>IF( 
				(NOT(ISBLANK(CC_Fecha_Fin_Vigencia__c)) &amp;&amp; TODAY() &gt;= CC_Fecha_Inicio_Vigencia__c &amp;&amp; TODAY() &lt; CC_Fecha_Fin_Vigencia__c ) || 
				(ISBLANK( CC_Fecha_Fin_Vigencia__c ) &amp;&amp; TODAY() &gt;= CC_Fecha_Inicio_Vigencia__c ), 
				true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activo</label>
    <type>Checkbox</type>
</CustomField>