force-app/main/default/objects/CBK_Precio_Facturacion__c/fields/CC_Canal_Entrada__c.field-meta.xml
<CustomField>
    <fullName>CC_Canal_Entrada__c</fullName>
    <label>Canal de entrada</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CC_Canal_de_entrada</valueSetName>
    </valueSet>
</CustomField>