force-app/main/default/objects/CBK_Precio_Facturacion__c/fields/CC_Fecha_Fin_Vigencia__c.field-meta.xml
<CustomField>
    <fullName>CC_Fecha_Fin_Vigencia__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha Fin</label>
    <type>Date</type>
</CustomField>