force-app/main/default/objects/CBK_Precio_Facturacion__c/fields/CC_Fecha_Inicio_Vigencia__c.field-meta.xml
<CustomField>
    <fullName>CC_Fecha_Inicio_Vigencia__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha Inicio</label>
    <required>true</required>
    <type>Date</type>
</CustomField>