force-app/main/default/objects/CBK_Precio_Facturacion__c/fields/CC_Precio_Contacto__c.field-meta.xml
<CustomField>
    <fullName>CC_Precio_Contacto__c</fullName>
    <label>Precio de Contacto</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>