force-app/main/default/objects/CBK_Precio_Facturacion__c/recordTypes/CC_PrecioFacturacion.recordType-meta.xml
<RecordType>
    <fullName>CC_PrecioFacturacion</fullName>
    <active>true</active>
    <label>CC_PrecioFacturacion</label>
</RecordType>