force-app/main/default/objects/CBK_Precio_Facturacion__c/validationRules/CC_Precio_Negativo.validationRule-meta.xml
<ValidationRule>
    <fullName>CC_Precio_Negativo</fullName>
    <active>true</active>
    <errorConditionFormula>CC_Precio_Contacto__c &lt; 0</errorConditionFormula>
    <errorMessage>El precio del contacto no puede ser negativo ni nulo</errorMessage>
</ValidationRule>