force-app/main/default/objects/CBK_Precio_Facturacion__c/validationRules/CC_Rango_de_fechas.validationRule-meta.xml
<ValidationRule>
    <fullName>CC_Rango_de_fechas</fullName>
    <active>true</active>
    <errorConditionFormula>CC_Fecha_Fin_Vigencia__c &lt; CC_Fecha_Inicio_Vigencia__c</errorConditionFormula>
    <errorMessage>La fecha fin no puede ser menor a la fecha inicio</errorMessage>
</ValidationRule>