force-app/main/default/objects/CBK_Precio_Facturacion__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CC_Nombre_Empresa__c</columns>
    <columns>CC_Canal_Entrada__c</columns>
    <columns>CC_Precio_Contacto__c</columns>
    <columns>CC_Fecha_Inicio_Vigencia__c</columns>
    <columns>CC_Fecha_Fin_Vigencia__c</columns>
    <columns>CC_Area_Negocio__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Todos los precios</label>
</ListView>